[package]
name = "tide"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/get-set/copy-tide"
description = "WIP modular web framework"
authors = ["kang <liukang.hi@gmail.com>"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
